- further improvement of SEO rating

--- a/src/app/component/landing-pages/category-teaser.component.html
+++ b/src/app/component/landing-pages/category-teaser.component.html
@@ -12,7 +12,7 @@
           <a href="{{getSeoFriendlySingleProductViewUrl(item)}}">
             <img
               class="informationItem__image"
-              alt="{{item.title}}"
+              alt="{{ 'IMAGE_OF' | translate }} {{item?.title || ''}}"
               src="{{item.titleImage}}"
               loading="lazy"
             />
