--- a/src/app/component/landing-pages/category-teaser.component.scss
+++ b/src/app/component/landing-pages/category-teaser.component.scss
@@ -10,8 +10,8 @@
   }
 
   &__title {
-    font-size: 1.3em;
-    padding-bottom: 1em;
+    font-size: 1.5em;
+    padding-bottom: 0.5em;
     text-align: center;
     text-align: -webkit-center;
     width: 100%;
@@ -29,6 +29,11 @@
 
   &__titleSlogan {
     color: goldenrod;
+  }
+
+  &__titleTeaser {
+    font-size: 0.75em;
+    padding-bottom: 0.5em;
   }
 }
 
