- major rework of color palette

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@
 
 .app-content {
   align-items: center;
-  background-color: #282c34;
+  background-color: $page-background;
   color: #FFF;
   flex-direction: column;
   min-height: 90vh;
