--- a/src/app/component/footer/footer.component.scss
+++ b/src/app/component/footer/footer.component.scss
@@ -14,7 +14,7 @@
   z-index: 2;
 
   &__link {
-    color: $content-color;
+    color: $header-footer-content-color;
     cursor: pointer;
     padding-left: 1em;
 
