--- a/src/app/component/landing-pages/category-teaser.component.html
+++ b/src/app/component/landing-pages/category-teaser.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="informationItems__containerWrapper">
   <h2 *ngIf="showHeader" class="category__title">
     <span class="header__titleCapitalLetter">W</span><span class="header__title">e</span>
     <span class="header__titleCapitalLetter">W</span><span class="header__title">anna</span>
