--- a/src/app/component/legal/data-protection.component.html
+++ b/src/app/component/legal/data-protection.component.html
@@ -140,7 +140,7 @@
         </p>
 
         <p>
-          E-Mail: <a href="mailto:marcel.marschner@outlook.com">marcel.marschner(at)outlook.com</a><br/>
+          E-Mail: <a href="mailto:kontakt@wewanna.shop">kontakt(at)wewanna.shop</a><br/>
           Website: https://www.wewanna.shop
         </p>
       </div>
