--- a/src/app/component/legal/data-protection.component.scss
+++ b/src/app/component/legal/data-protection.component.scss
@@ -1,9 +1,12 @@
+@import 'src/app/variables';
+
 .data-protection {
+  color: $content-color;
   font-size: 0.95em;
   padding-top: 6em;
 
   a {
-    color: white;
+    color: $content-color;
   }
 
   &__item {
