--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -1,4 +1,10 @@
-$container-background-color: #355f7d;
-$container-background-color-as-rgba: rgba(53, 95, 125, 0.75);
-$content-color: #0dcaf0;
+$container-background-color: rgb(6, 3, 77);
+$container-background-color-as-rgba: rgba(6, 3, 77, 0.85);
+$container-color: #0dcaf0;
+$content-color: #0F1111;
 $content-color--active: lightblue;
+$header-footer-content-color: #0dcaf0;
+$page-background: rgb(245, 245, 245);
+//$page-background: #fff;
+$content-price-color: rgb(15, 17, 17);
+$logo-capital-letter-color: #0dcaf0;
