--- a/src/app/component/legal/imprint.component.html
+++ b/src/app/component/legal/imprint.component.html
@@ -16,7 +16,7 @@
         <h2>Kontakt</h2>
         <p>
           Telefon: 017632340057<br/>
-          E-Mail: <a href="mailto:marcel.marschner@outlook.com">marcel.marschner(at)outlook.com</a>
+          E-Mail: <a href="mailto:kontakt@wewanna.shop">kontakt(at)wewanna.shop</a>
         </p>
       </div>
 
@@ -40,7 +40,7 @@
           <br/><br/>
           Bei Fragen zu dieser Seite k&ouml;nnen Sie sich direkt an mich wenden:
           <br/>
-          E-Mail: <a href="mailto:marcel.marschner@outlook.com">marcel.marschner(at)outlook.com</a>
+          E-Mail: <a href="mailto:kontakt@wewanna.shop">kontakt(at)wewanna.shop</a>
         </p>
       </div>
     </div>
