--- a/src/app/component/legal/imprint.component.scss
+++ b/src/app/component/legal/imprint.component.scss
@@ -1,9 +1,12 @@
+@import 'src/app/variables';
+
 .imprint {
+  color: $content-color;
   letter-spacing: 0.01em;
   padding-top: 6em;
 
   a {
-    color: white;
+    color: $content-color;
   }
 
   &__item {
