- a lot of progress!

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -8,9 +8,9 @@
 
           <h1 class="header__logo" style="cursor: pointer;">
             <a href="/">
-              <span class="header__titleCapitalLetter">W</span><span style="color: lightblue;">e</span>
-              <span class="header__titleCapitalLetter">W</span><span style="color: lightblue;">anna</span>
-              <span style="color: goldenrod;"> {{'NAVIGATION_SLOGAN_' + (activeNavigationItem?.hasSlogan ? activeNavigationItem?.toId || 'ALL' : 'ALL') | translate}}!</span>
+              <span class="header__titleCapitalLetter">W</span><span class="header__title">e</span>
+              <span class="header__titleCapitalLetter">W</span><span class="header__title">anna</span>
+              <span class="header__titleSlogan"> {{'NAVIGATION_SLOGAN_' + (activeNavigationItem?.hasSlogan ? activeNavigationItem?.toId || 'ALL' : 'ALL') | translate}}!</span>
             </a>
           </h1>
 
