--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -15,7 +15,7 @@
   }
 
   &__icon {
-    color: $header-footer-content-color;
+    color: $content-color--active;
     cursor: pointer;
     font-size: 1.35em;
 
@@ -25,11 +25,11 @@
     }
 
     &--activeEmpty {
-      color: rgba(173, 216, 230, 0.50);
+      color: rgba($content-color--active, 0.50);
     }
 
     &--empty {
-      color: rgba(13, 202, 240, 0.50);
+      color: rgba($content-color--active, 0.50);
     }
 
     &Wrapper {
@@ -107,13 +107,20 @@
 
   &__title {
     text-align: center;
+
+    a {
+      color: $logo-letter-color;
+    }
   }
 
   &__titleCapitalLetter {
-    color: $header-footer-content-color;
+    color: $logo-capital-letter-color;
     font-weight: bold;
   }
 
+  &__titleSlogan {
+    color: $logo-slogan-color;
+  }
 }
 
 .headerbar {
@@ -127,7 +134,7 @@
     background-color: unset;
     border: 2px solid $header-footer-content-color;
     border-radius: 2em;
-    color: #FFF;
+    color: $content-color;
     height: 1.8em;
     outline: 0;
     padding-left: 1.2em;
@@ -151,11 +158,11 @@
   }
 
   &__inputButton {
-    background-color: lightblue;
-    border: 1px solid lightblue;
+    background-color: $logo-letter-color;
+    border: 1px solid $logo-letter-color;
     border-radius: 50%;
+    color: $logo-slogan-color;
     font-family: "Font Awesome 5 Free", system-ui;
-    color: #2d3e5e;
     padding: 0.20em;
   }
 }
