--- a/src/app/component/landing-pages/category-teaser.component.scss
+++ b/src/app/component/landing-pages/category-teaser.component.scss
@@ -20,7 +20,7 @@
 
 .header {
   &__title {
-    color: $content-color--active;
+    color: $logo-letter-color;
   }
 
   &__titleCapitalLetter {
@@ -28,11 +28,12 @@
   }
 
   &__titleSlogan {
-    color: goldenrod;
+    color: $logo-slogan-color;
   }
 
   &__titleTeaser {
     color: $container-color;
+    font-family: $font-family;
     font-size: 0.75em;
     padding-bottom: 0.5em;
   }
@@ -60,7 +61,7 @@
 
   a {
     color: $content-color;
-    font-weight: bold;
+    font-family: $font-family;
     text-decoration: none;
   }
 
@@ -70,11 +71,11 @@
 
   &__image {
     border-radius: 0.5em;
-    max-height: 14em;
+    max-height: 18em;
     max-width: 100%;
 
     @media screen and (min-width: 768px) {
-      max-height: 20em;
+      max-height: 22em;
     }
   }
 
@@ -84,7 +85,7 @@
     border-radius: 0.5em;
     display: flex;
     justify-content: center;
-    min-height: 15em;
+    min-height: 20em;
     padding: 0.5em;
     position: relative;
     width: 10em;
@@ -94,12 +95,12 @@
     }
 
     @media screen and (min-width: 768px) {
-      min-height: 21em;
+      min-height: 23em;
       width: 12em;
     }
 
     @media screen and (min-width: 1400px) {
-      min-height: 21em;
+      min-height: 23em;
       width: 14em;
     }
 
@@ -116,7 +117,8 @@
   &__price {
     background-color: $container-background-color;
     border-radius: 15px;
-    color: $container-color;
+    color: $content-price-color;
+    justify-content: center;
     margin: 1em;
     padding: 0.3em;
 
