--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -1,10 +1,12 @@
-$container-background-color: rgb(6, 3, 77);
-$container-background-color-as-rgba: rgba(6, 3, 77, 0.85);
-$container-color: #0dcaf0;
-$content-color: #0F1111;
-$content-color--active: lightblue;
-$header-footer-content-color: #0dcaf0;
-$page-background: rgb(245, 245, 245);
-//$page-background: #fff;
-$content-price-color: rgb(15, 17, 17);
-$logo-capital-letter-color: #0dcaf0;
+$container-background-color: rgb(255, 255, 255);
+$container-background-color-as-rgba: rgba(255, 255, 255, 0.85);
+$container-color: #122947;
+$content-color: #122947;
+$content-color--active: #DE5935;
+$font-family: Calibri;
+$header-footer-content-color: #122947;
+$page-background: #f3f4f2;
+$content-price-color: #122947;
+$logo-capital-letter-color: #DE5935;
+$logo-letter-color: #354e61;
+$logo-slogan-color: orange;
