--- a/src/app/component/footer/footer.component.scss
+++ b/src/app/component/footer/footer.component.scss
@@ -3,8 +3,8 @@
 .footer {
   backdrop-filter: blur(3px);
   background: $container-background-color-as-rgba;
+  border-top: 1px solid lightgray;
   bottom: 0;
-  border-top: 1px solid lightblue;
   font-size: 0.85em;
   height: 2.3em;
   padding-top: 0.3em;
