--- a/src/app/component/overview/items.component.html
+++ b/src/app/component/overview/items.component.html
@@ -7,7 +7,7 @@
         <div *ngIf="item" [ngClass]="['informationItem', item?.itemId ? '' : 'informationItem--loading']">
           <div [ngClass]="['informationItem__imageContainer', item?.itemId ? '' : 'informationItem__imageContainer--loading']">
             <a href="{{getSeoFriendlySingleProductViewUrl(item)}}" (click)="pickedInformation(item)">
-              <img
+              <img *ngIf="item?.itemId"
                 class="informationItem__image"
                 alt="{{'IMAGE_OF' | translate }} {{item.title}}"
                 src="{{item.titleImage}}"
@@ -18,7 +18,7 @@
           </div>
           <a href="{{getSeoFriendlySingleProductViewUrl(item)}}" (click)="pickedInformation(item)">
             <div class="informationItem__contentContainer">
-              <div *ngIf="renderLowestPrice(item); else noPrice" [ngClass]="['informationItem__price']">
+              <div *ngIf="renderLowestPrice(item); else noPrice" [ngClass]="['button', 'informationItem__price']">
                 {{ 'PRICE_FROM' | translate }} {{renderLowestPrice(item) || ''}}
               </div>
               <ng-template #noPrice>
