--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -1,3 +1,4 @@
+@import "src/styles/controls";
 @import 'src/app/variables';
 
 .informationItem {
@@ -21,7 +22,8 @@
   }
 
   a {
-    color: #FFF;
+    color: $content-color;
+    font-family: $font-family;
     text-decoration: none;
   }
 
@@ -31,11 +33,11 @@
 
   &__image {
     border-radius: 0.5em;
-    max-height: 14em;
+    max-height: 18em;
     max-width: 100%;
 
     @media screen and (min-width: 768px) {
-      max-height: 20em;
+      max-height: 22em;
     }
   }
 
@@ -45,7 +47,7 @@
     border-radius: 0.5em;
     display: flex;
     justify-content: center;
-    min-height: 15em;
+    min-height: 20em;
     padding: 0.5em;
     position: relative;
     width: 10em;
@@ -55,12 +57,12 @@
     }
 
     @media screen and (min-width: 768px) {
-      min-height: 21em;
+      min-height: 23em;
       width: 12em;
     }
 
     @media screen and (min-width: 1400px) {
-      min-height: 21em;
+      min-height: 23em;
       width: 14em;
     }
 
@@ -77,6 +79,8 @@
   &__price {
     background-color: $container-background-color;
     border-radius: 15px;
+    color: $content-price-color;
+    justify-content: center;
     margin: 1em;
     padding: 0.3em;
 
@@ -95,13 +99,27 @@
     -webkit-line-clamp: 4;
   }
 
+  &--displayFromXXL {
+    display: none;
+
+    @media screen and (min-width: 1400px) {
+      display: inherit;
+    }
+  }
+
+  &--displayUpToL {
+    @media screen and (max-width: 992px) {
+      display: inherit;
+    }
+  }
+
   &--loading {
     animation-duration: 4s;
     animation-fill-mode: forwards;
     animation-iteration-count: infinite;
     animation-name: placeHolderShimmer;
     animation-timing-function: linear;
-    background: linear-gradient(to right, rgba(7, 80, 97, .25) 8%, rgba(7, 100, 97, .25) 50%, rgba(7, 80, 97, .25) 92%);
+    background: linear-gradient(to right, rgba($container-background-color, .25) 8%, rgba($logo-capital-letter-color, .25) 50%, rgba($container-background-color, .25) 92%);
     background-size: 800px 104px;
     position: relative;
   }
@@ -109,11 +127,18 @@
 
 .informationItems {
   &__container {
-    background-color: rgba(7, 80, 97, .25);
-    border-radius: 0.5em;
+    background-color: #fff;
     display: inline-flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding-top: 1em;
+  }
+
+  &__containerWrapper {
+    background-color: $container-background-color-as-rgba;
+    border: 1px solid lightgray;
+    border-radius: 0.5em;
+    margin-bottom: 2em;
     padding-top: 1em;
   }
 
