--- a/src/app/component/wishlist/add-to-wishlist.component.scss
+++ b/src/app/component/wishlist/add-to-wishlist.component.scss
@@ -7,7 +7,8 @@
     font-size: 2em;
     position: absolute;
     top: -1em;
-    right: -1em;
+    right: -0.65em;
+    z-index: 2;
   }
 
   &__wishlistIcon {
