--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -6,7 +6,7 @@ $content-color--active: #DE5935;
 $font-family: Calibri;
 $header-footer-content-color: #122947;
 $page-background: #f3f4f2;
-$content-price-color: #122947;
+$content-price-color: #DE5935;
 $logo-capital-letter-color: #DE5935;
 $logo-letter-color: #354e61;
 $logo-slogan-color: orange;
