--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -4,12 +4,12 @@
 .header {
   backdrop-filter: blur(3px);
   background: $container-background-color-as-rgba;
-  box-shadow: 0.1em 0.1em 0.8em silver;
+  box-shadow: 0.1em 0.1em 0.8em lightgray;
   color: $header-footer-content-color;
   padding: 0.5em 0.5em 0.7em 0.5em;
   position: fixed;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
 
   &__content {
     padding-top: 0.20em;
