--- a/src/app/component/landing-pages/category-teaser.component.scss
+++ b/src/app/component/landing-pages/category-teaser.component.scss
@@ -35,7 +35,8 @@
     color: $container-color;
     font-family: $font-family;
     font-size: 0.75em;
-    padding-bottom: 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
   }
 }
 
@@ -72,10 +73,11 @@
   &__image {
     border-radius: 0.5em;
     max-height: 18em;
-    max-width: 100%;
+    max-width: 10em;
 
     @media screen and (min-width: 768px) {
       max-height: 22em;
+      max-width: 14em;
     }
   }
 
@@ -115,11 +117,25 @@
   }
 
   &__price {
+    color: $content-price-color;
+    font-family: $font-family;
+
+    @media screen and (min-width: 576px) {
+      font-size: 1.5em;
+    }
+
+    &:hover {
+      color: $logo-slogan-color;
+    }
+  }
+
+  &__priceWrapper {
+    align-items: baseline;
     background-color: $container-background-color;
     border-radius: 15px;
-    color: $content-price-color;
+    font-weight: bold;
     justify-content: center;
-    margin: 1em;
+    margin-bottom: 1em;
     padding: 0.3em;
 
     &--hidden {
