--- a/src/app/component/overview/items.component.html
+++ b/src/app/component/overview/items.component.html
@@ -18,8 +18,9 @@
           </div>
           <a href="{{getSeoFriendlySingleProductViewUrl(item)}}" (click)="pickedInformation(item)">
             <div class="informationItem__contentContainer">
-              <div *ngIf="renderLowestPrice(item); else noPrice" [ngClass]="['button', 'informationItem__price']">
-                {{ 'PRICE_FROM' | translate }} {{renderLowestPrice(item) || ''}}
+              <div *ngIf="renderLowestPrice(item); else noPrice" [ngClass]="['button', 'informationItem__priceWrapper']">
+                {{ 'PRICE_FROM' | translate }}
+                <span class="informationItem__price">&nbsp;{{renderLowestPrice(item) || ''}}</span>
               </div>
               <ng-template #noPrice>
                 <div [ngClass]="['informationItem__price', 'informationItem__price--hidden']">
