--- a/src/app/component/overview/items.component.html
+++ b/src/app/component/overview/items.component.html
@@ -2,73 +2,47 @@
 
   <div class="container informationItems__content">
     <div class="col-12 informationItems__container">
-      <div *ngFor="let item of items">
-
-        <div *ngIf="item" [ngClass]="['informationItem', item?.itemId ? '' : 'informationItem--loading']">
-          <div [ngClass]="['informationItem__imageContainer', item?.itemId ? '' : 'informationItem__imageContainer--loading']">
-            <a href="{{getSeoFriendlySingleProductViewUrl(item)}}" (click)="pickedInformation(item)">
-              <img *ngIf="item?.itemId"
-                class="informationItem__image"
-                alt="{{'IMAGE_OF' | translate }} {{item.title}}"
-                src="{{item.titleImage}}"
-                loading="lazy"
-              />
-            </a>
-            <app-add-to-wishlist [item]="item"></app-add-to-wishlist>
-          </div>
-          <a href="{{getSeoFriendlySingleProductViewUrl(item)}}" (click)="pickedInformation(item)">
-            <div class="informationItem__contentContainer">
-              <div *ngIf="renderLowestPrice(item); else noPrice" [ngClass]="['button', 'informationItem__priceWrapper']">
-                {{ 'PRICE_FROM' | translate }}
-                <span class="informationItem__price">&nbsp;{{renderLowestPrice(item) || ''}}</span>
-              </div>
-              <ng-template #noPrice>
-                <div [ngClass]="['informationItem__price', 'informationItem__price--hidden']">
-                  &nbsp;
-                </div>
-              </ng-template>
-              <div class="informationItem__title">{{item.title}}</div>
-            </div>
-          </a>
-        </div>
-      </div>
+      <app-item *ngFor="let item of items" [item]="item">
+      </app-item>
     </div>
   </div>
 </div>
 
 <div class="container">
   <div class="col-12 pages__container">
-    <div *ngIf="currentPage > 1; else leftDisabled" class="pages__page">
-      <a href="{{linkToPage(currentPage - 1)}}">
-        &laquo;
-      </a>
-    </div>
-    <ng-template #leftDisabled>
-      <div class="pages__page--disabled">
-        &laquo;
+    <div class="pages__wrapper">
+      <div *ngIf="currentPage > 1; else leftDisabled" class="pages__page">
+        <a href="{{linkToPage(currentPage - 1)}}">
+          &laquo; {{'BACK' | translate}}
+        </a>
       </div>
-    </ng-template>
+      <ng-template #leftDisabled>
+        <div class="pages__page--disabled">
+          &laquo; {{'BACK' | translate}}
+        </div>
+      </ng-template>
 
-    <div *ngFor="let page of availablePages" class="pages__page {{currentPage === page ? 'pages__page--active' : ''}}">
+      <div *ngFor="let page of availablePages" class="pages__page {{currentPage === page ? 'pages__page--active' : ''}}">
 
-      <a *ngIf="0 !== page; else dots" href="{{linkToPage(page)}}">
-        {{page}}
-      </a>
+        <a *ngIf="0 !== page; else dots" href="{{linkToPage(page)}}">
+          {{page}}
+        </a>
 
-      <ng-template #dots>
-        ...
+        <ng-template #dots>
+          ...
+        </ng-template>
+      </div>
+
+      <div *ngIf="isNextPageNotLastPage; else rightDisabled" class="pages__page">
+        <a href="{{linkToPage(currentPage + 1)}}">
+          {{'NEXT' | translate}} &raquo;
+        </a>
+      </div>
+      <ng-template #rightDisabled>
+        <div class="pages__page--disabled">
+          {{'NEXT' | translate}} &raquo;
+        </div>
       </ng-template>
     </div>
-
-    <div *ngIf="isNextPageNotLastPage; else rightDisabled" class="pages__page">
-      <a href="{{linkToPage(currentPage + 1)}}">
-        &raquo;
-      </a>
-    </div>
-    <ng-template #rightDisabled>
-      <div class="pages__page--disabled">
-        &raquo;
-      </div>
-    </ng-template>
   </div>
 </div>
