--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -1,145 +1,6 @@
 @import "src/styles/controls";
 @import 'src/app/variables';
 
-.informationItem {
-  font-size: 0.85em;
-  padding: 1.5em 0.5em 1.5em 0.5em;
-  margin: 0.5em;
-  text-align: center;
-  text-align: -webkit-center;
-  width: 11em;
-
-  @media screen and (min-width: 576px) {
-    width: 15em;
-  }
-
-  @media screen and (min-width: 768px) {
-    width: 20em;
-  }
-
-  @media screen and (min-width: 1400px) {
-    width: 20em;
-  }
-
-  a {
-    color: $content-color;
-    font-family: $font-family;
-    text-decoration: none;
-  }
-
-  &__contentContainer {
-    margin-top: 2em;
-  }
-
-  &__image {
-    border-radius: 0.5em;
-    max-height: 18em;
-    max-width: 10em;
-
-    @media screen and (min-width: 768px) {
-      max-height: 22em;
-      max-width: 14em;
-    }
-  }
-
-  &__imageContainer {
-    align-items: center;
-    background-color: #FFF;
-    border-radius: 0.5em;
-    display: flex;
-    justify-content: center;
-    min-height: 20em;
-    padding: 0.5em;
-    position: relative;
-    width: 10em;
-
-    @media screen and (min-width: 576px) {
-      width: 9em;
-    }
-
-    @media screen and (min-width: 768px) {
-      min-height: 23em;
-      width: 12em;
-    }
-
-    @media screen and (min-width: 1400px) {
-      min-height: 23em;
-      width: 14em;
-    }
-
-    &:hover {
-      transform: scale(1.1);
-      transition: transform 0.5s;
-    }
-
-    &--loading {
-      background: none;
-    }
-  }
-
-  &__price {
-    color: $content-price-color;
-    font-family: $font-family;
-
-    @media screen and (min-width: 576px) {
-      font-size: 1.5em;
-    }
-
-    &:hover {
-      color: $logo-slogan-color;
-    }
-  }
-
-  &__priceWrapper {
-    align-items: baseline;
-    background-color: $container-background-color;
-    border-radius: 15px;
-    font-weight: bold;
-    justify-content: center;
-    margin-bottom: 1em;
-    padding: 0.3em;
-
-    &--hidden {
-      background: none;
-    }
-  }
-
-  &__title {
-    display: -webkit-box;
-    line-clamp: 4;
-    min-height: 6em;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 4;
-  }
-
-  &--displayFromXXL {
-    display: none;
-
-    @media screen and (min-width: 1400px) {
-      display: inherit;
-    }
-  }
-
-  &--displayUpToL {
-    @media screen and (max-width: 992px) {
-      display: inherit;
-    }
-  }
-
-  &--loading {
-    animation-duration: 4s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: infinite;
-    animation-name: placeHolderShimmer;
-    animation-timing-function: linear;
-    background: linear-gradient(to right, rgba($container-background-color, .25) 8%, rgba($logo-capital-letter-color, .25) 50%, rgba($container-background-color, .25) 92%);
-    background-size: 800px 104px;
-    position: relative;
-  }
-}
-
 .informationItems {
   &__container {
     background-color: #fff;
@@ -174,12 +35,22 @@
   }
 
   &__page {
+    align-items: center;
+    display: flex;
+    height: 2.5em;
     padding-left: 0.75em;
     padding-right: 0.75em;
 
     a {
-      color: $content-color;
+      background-color: inherit;
+      color: inherit;
       text-decoration: none;
+    }
+
+    &:hover {
+      background-color: $content-color;
+      color: $container-background-color;
+      transition: background-color 0.25s;
     }
 
     &--active {
@@ -187,7 +58,17 @@
     }
 
     &--disabled {
+      align-items: center;
       color: lightgray;
+      display: flex;
+      padding-left: 0.75em;
+      padding-right: 0.75em;
     }
+  }
+
+  &__wrapper {
+    border: 1px solid lightgray;
+    border-radius: 1em;
+    display: flex;
   }
 }
