--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -3,7 +3,7 @@ $container-background-color-as-rgba: rgba(255, 255, 255, 0.85);
 $container-color: #122947;
 $content-color: #122947;
 $content-color--active: #DE5935;
-$font-family: Calibri;
+$font-family: Roboto, sans-serif;
 $header-footer-content-color: #122947;
 $page-background: #f3f4f2;
 $content-price-color: #DE5935;
