--- a/src/app/component/landing-pages/category-teaser.component.html
+++ b/src/app/component/landing-pages/category-teaser.component.html
@@ -2,7 +2,7 @@
   <h2 *ngIf="showHeader" class="category__title">
     <span class="header__titleCapitalLetter">W</span><span class="header__title">e</span>
     <span class="header__titleCapitalLetter">W</span><span class="header__title">anna</span>
-    <span class="header__titleSlogan"> {{('NAVIGATION_SLOGAN_' + (navigationItem?.hasSlogan ? navigationItem?.toId || 'ALL' : 'ALL')) | translate}}!</span>
+    <span class="header__titleSlogan"> {{ sloganTranslationId | translate}}!</span>
   </h2>
 
   <h3 *ngIf="showHeader && navigationItem?.hasTeaser">
@@ -17,7 +17,7 @@
   </div>
   <div class="category__actions">
     <a href="{{moreLink}}" class="button">
-        {{'SHOW_MORE_PREFIX' | translate }} "{{ ('NAVIGATION_' + navigationItem?.toId) | translate }}" {{'SHOW_MORE_SUFFIX' | translate }}
+        {{'SHOW_MORE_PREFIX' | translate }} "{{ navigationTranslationId | translate }}" {{'SHOW_MORE_SUFFIX' | translate }}
     </a>
   </div>
 </section>
