- reactivated main category "luxuries" - header is now english again

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -10,7 +10,7 @@
             <a href="/">
               <span class="header__titleCapitalLetter">W</span><span class="header__title">e</span>
               <span class="header__titleCapitalLetter">W</span><span class="header__title">anna</span>
-              <span class="header__titleSlogan"> {{'NAVIGATION_SLOGAN_' + (activeNavigationItem?.hasSlogan ? activeNavigationItem?.toId || 'ALL' : 'ALL') | translate}}!</span>
+              <span class="header__titleSlogan"> {{'NAVIGATION_SLOGAN_' + (activeNavigationItem?.hasSlogan ? activeNavigationItem?.toId || 'ALL' : 'ALL') | translate: 'en_US' }}!</span>
             </a>
           </h1>
 
