- added new categories - description can now be extended when clicking it

--- a/src/app/component/product-view/single-product-view.component.html
+++ b/src/app/component/product-view/single-product-view.component.html
@@ -24,7 +24,7 @@
       <div class="productInformation">
         <section>
           <h2 class="singleProductView__sectionHeader">{{item?.title}}</h2>
-          <p class="mainStage__productDescription">
+          <p class="mainStage__productDescription{{showFullDescription ? ' mainStage__productDescription--full' : ''}}" (click)="toggleFullDescription()">
             {{item?.description}}
           </p>
         </section>
