--- a/src/app/component/product-view/single-product-view.component.scss
+++ b/src/app/component/product-view/single-product-view.component.scss
@@ -19,6 +19,10 @@
     text-overflow: ellipsis;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 8;
+
+    &--full {
+      display: inherit;
+    }
   }
 
   &__mainImage {
