--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -19,7 +19,9 @@
   }
 
   &__content {
+    color: $content-color;
     display: flex;
+    font-family: $font-family;
     padding-top: 4.5em;
   }
 }
