- revamped price presentation in single product view - hightlight section on startpage is now hidden, when user searched

--- a/src/app/component/landing-pages/start-page.component.html
+++ b/src/app/component/landing-pages/start-page.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="container">
-    <category-teaser
+    <category-teaser *ngIf="!hasUserSearched"
       [showHighlights]="true"
     ></category-teaser>
 
